--- a/main/index.html
+++ b/main/index.html
@@ -429,6 +429,24 @@
                 <a href="https://www.bing.com/search?q=pay+after+placement+programs+&form=ANNTH1&refig=112e3dd3c1f549a39e9e09d39fab8c82">pay after placement programs - Search</a><br> <br> <br>
     
     <h2>hackanews</h2>
+                <a href="https://hackaday.com/blog/page/2/">Blog | Hackaday | Fresh Hacks Every Day | Page 2</a><br> <br>
+                <a href="https://www.wolframalpha.com/examples/science-and-technology/physics">Wolfram|Alpha Examples: Physics</a><br> <br>
+                <a href="https://www.hacksplaining.com/lessons">Pick a Vulnerability to Learn About</a><br> <br>
+                <a href="https://haveibeenpwned.com/">Have I Been Pwned: Check if your email has been compromised in a data breach</a><br> <br>
+                <a href="https://gohighbrow.com/courses/">Courses | Highbrow</a><br> <br>
+                <a href="https://electronics.howstuffworks.com/tech">Tech | HowStuffWorks</a><br> <br>
+                <a href="https://www.ifixit.com/Device/Lenovo_B50-80">Lenovo B50-80 Repair - iFixit</a><br> <br>
+                <a href="https://www.instructables.com/circuits/projects">Circuits Projects - Instructables</a><br> <br>
+                <a href="https://www.wolframalpha.com/examples/science-and-technology/physics">Wolfram|Alpha Examples: Physics</a><br> <br>
+                <a href="https://www.urbandictionary.com/browse.php?character=B">Urban Dictionary: Words in B</a><br> <br>
+                <a href="https://www.typing.com/">Learn to Type | Type Better | Type Faster - Typing.com - Typing.com</a><br> <br>
+                <a href="https://tosdr.org/">Frontpage -- Terms of Service; Didn't Read</a><br> <br>
+                <a href="https://www.gutenberg.org/">Free eBooks | Project Gutenberg</a><br> <br>
+                <a href="https://www.pdfdrive.com/category/5">Free Technology Books - PDF Drive</a> <br> <br>
+                <a href="https://privnote.com/">Privnote - Send notes that will self-destruct after being read</a><br> <br>
+                <a href="https://pcpartpicker.com/list/#compatibility_notes">Choose Your Parts - PCPartPicker</a><br> <br>
+                <a href="https://openlibrary.org/">Welcome to Open Library | Open Library</a><br> <br>
+    
     <h2>free NAS</h2>
     <h2>wify file trnsfr</h2>
     <h2>CDAC</h2>
