--- a/main/index.html
+++ b/main/index.html
@@ -448,6 +448,13 @@
                 <a href="https://openlibrary.org/">Welcome to Open Library | Open Library</a><br> <br>
     
     <h2>free NAS</h2>
+                <a href="https://www.howtogeek.com/190835/how-to-turn-an-old-pc-into-a-home-file-server/">How to Turn an Old PC Into a Home File Server</a><br> <br>
+                <a href="https://www.bestbackups.com/diy-nas-old-pc/">Guide to building your own diy NAS Server | Bestbackups.com</a><br> <br>
+                <a href="https://www.youtube.com/watch?v=FN3NhrD3KWo&ab_channel=TorogiPro">How to build a DIY NAS from an OLD PC [0$-50$] Budget | TrueNAS</a><br> <br>
+                <a href="https://www.reddit.com/r/DataHoarder/comments/66y8ma/how_to_fit_20_hdds_and_2_ssds_in_fractal_xl_r2/">How to fit 20 HDDs and 2 SSDs in Fractal XL R2 (details inside) : DataHoarder</a><br> <br>
+                <a href="https://www.bing.com/videos/search?q=diy+nas+from+old+pc&docid=603542088796275991&mid=7910E1F17DB67C76464B7910E1F17DB67C76464B&view=detail&FORM=VIRE">Building A DIY NAS On A Budget - TrueNAS Scale - Bing video</a><br> <br>
+                <a href="https://www.bing.com/search?q=diy+nas+from+old+pc&FORM=QSRE2">diy nas from old pc - Search</a><br> <br> <br>
+    
     <h2>wify file trnsfr</h2>
     <h2>CDAC</h2>
     <h2>ms excel</h2>
