--- a/main/index.html
+++ b/main/index.html
@@ -467,6 +467,21 @@
                 <a href="https://www.appsloveworld.com/sample-excel-data/">Download Sample Excel File with Data for Analysis</a><br> <br> <br>
     
     <h2>Learn Microsoft</h2>
+                <a href="https://docs.microsoft.com/en-in/search/?terms=excel%20learn&category=Learn&products=%2Fdevrel%2F1dd701e0-441f-4b0a-9806-aa47decc4e35%2C%2Fdevrel%2F6ab06385-661e-4214-8870-bbe4071c960d">Search | Microsoft Docs</a><br> <br>
+                <a href="https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4IMMV">Microsoft 365 Training + Certification Guide</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/learn/certifications/beta-exams">Beta exams | Microsoft Docs</a><br> <br>
+                <a href="https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ">Microsoft training and certifications</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/learn/certifications/exams/77-420">Exam 77-420: Microsoft Excel 2013 - Learn | Microsoft Docs</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/learn/certifications/microsoft-office-specialist-master-certification-2013/">Microsoft Office Specialist 2013 Master - Learn | Microsoft Docs</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/learn/certifications/mos-excel-2013/">Microsoft Office Specialist: Excel 2013 - Learn | Microsoft Docs</a><br> <br>
+                <a href="https://www.anudip.org/certification/#certificate_2">Certification - Anudip Foundation</a><br> <br>
+                <a href="https://www.certiport.com/Locator/Home/Details/90070453">Certiport | Authorized Testing Center Locator</a><br> <br>
+                <a href="https://www.excelhelp.com/the-excel-development-process/">Advanced Excel Consulting Services [VBA Dev 2018] | Excel Help</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/learn/certifications/browse/?expanded=office&products=office-excel">Browse Certifications and Exams | Microsoft Docs</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/learn/powerplatform/power-bi">Power BI on Microsoft Learn | Microsoft Docs</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/power-platform/">Microsoft Power Platform documentation - Power Platform | Microsoft Docs</a><br> <br>
+                <a href="https://docs.microsoft.com/en-us/learn/paths/design-accident-tracking/">Design an accident tracking app in Power Apps - Learn | Microsoft Docs</a><br> <br> <br>
+    
     <h2>Tableau</h2>
     <h2>Subscription Microsoft 365 Personal</h2>
     <h2>Oracle DB</h2>
