--- a/main/index.html
+++ b/main/index.html
@@ -483,6 +483,11 @@
                 <a href="https://docs.microsoft.com/en-us/learn/paths/design-accident-tracking/">Design an accident tracking app in Power Apps - Learn | Microsoft Docs</a><br> <br> <br>
     
     <h2>Tableau</h2>
+                <a href="https://public.tableau.com/en-us/s/">Free Data Visualization Software | Tableau Public</a><br> <br>
+                <a href="https://public.tableau.com/en-us/s/about">Visualize Public Data | Explore, Learn, Share | Tableau Public</a><br> <br>
+                <a href="https://www.google.com/search?q=difference+tableau+public+and+desktop&newwindow=1&sxsrf=ALiCzsb2Yl6NKPoj0jbtHoWG0wo_jx691A%3A1652718799424&source=hp&ei=z3yCYom-F5SL-Aa4qLWwCQ&iflsig=AJiK0e8AAAAAYoKK38W_FugTRvpN5adXoyHzqHi3bPO6&oq=comparison+of+tableu+pu&gs_lcp=Cgdnd3Mtd2l6EAMYADIGCAAQFhAeOgQIIxAnOgUIABCRAjoICAAQgAQQsQM6CwgAEIAEELEDEIMBOggIABCxAxCDAToFCAAQgAQ6DgguEIAEELEDEMcBENEDOgoIABCABBBGEP8BOgQIABANUABY9pUBYJ2sAWgAcAB4AIABkgOIAcEukgEKMC4xLjE2LjUuMZgBAKABAQ&sclient=gws-wiz">difference tableau public and desktop - Google Search</a><br> <br>
+                <a href="https://www.edureka.co/blog/tableau-desktop-vs-tableau-public-vs-tableau-reader/#:~:text=Tableau%20Desktop%20is%20meant%20for,%2C%20bloggers%2C%20students%20and%20more.">Tableau Desktop vs Tableau Public vs Tableau Reader | Edureka</a><br> <br> <br>
+    
     <h2>Subscription Microsoft 365 Personal</h2>
     <h2>Oracle DB</h2>
     <h2>webnairs IT</h2>
