Subscription Microsoft 365 Personal

--- a/main/index.html
+++ b/main/index.html
@@ -489,6 +489,10 @@
                 <a href="https://www.edureka.co/blog/tableau-desktop-vs-tableau-public-vs-tableau-reader/#:~:text=Tableau%20Desktop%20is%20meant%20for,%2C%20bloggers%2C%20students%20and%20more.">Tableau Desktop vs Tableau Public vs Tableau Reader | Edureka</a><br> <br> <br>
     
     <h2>Subscription Microsoft 365 Personal</h2>
+                <a href="https://account.microsoft.com/services/microsoft365/details?ref=SetupPostAcquisition&lang=en-US&refd=setup.office.com">Microsoft account | Services &amp; subscriptions</a><br>
+                <a href="https://onedrive.live.com/?id=root&cid=EB5AF56EADC15D76">My files - OneDrive</a><br>
+                <a href="https://builder.zety.com/resume/section/educ-det/f3d2a0d1-79d7-4857-8d59-9c6f070ff795/4d481985-2e0c-485a-a810-1700271fc4ee">Education Section - Zety</a><br> <br>
+    
     <h2>Oracle DB</h2>
     <h2>webnairs IT</h2>
     <h2>New collection (1)</h2>
