--- a/main/index.html
+++ b/main/index.html
@@ -494,6 +494,12 @@
                 <a href="https://builder.zety.com/resume/section/educ-det/f3d2a0d1-79d7-4857-8d59-9c6f070ff795/4d481985-2e0c-485a-a810-1700271fc4ee">Education Section - Zety</a><br> <br>
     
     <h2>Oracle DB</h2>
+                <a href="https://www.oracle.com/in/database/technologies/oracle19c-windows-downloads.html">Oracle Database 19c Download for Microsoft Windows x64 (64-bit) | Oracle India</a><br> <br>
+                <a href="https://dotnettutorials.net/lesson/how-to-download-and-install-oracle-19c-softwareon-windows-10/">How to Install Oracle 19c Software on Windows 10 - Dot Net Tutorials</a><br> <br>
+                <a href="https://docs.python.org/3.6/tutorial/index.html">The Python Tutorial — Python 3.6.15 documentation</a><br> <br>
+                <a href="https://docs.python.org/3.6/index.html">3.6.15 Documentation</a><br> <br>
+                <a href="https://www.oracle.com/tools/downloads/sqldev-downloads.html#sqldev-install-windows">Oracle SQL Developer Downloads</a><br> <br>
+
     <h2>webnairs IT</h2>
     <h2>New collection (1)</h2>
     <h2>DBZ</h2>
