--- a/main/index.html
+++ b/main/index.html
@@ -501,6 +501,14 @@
                 <a href="https://www.oracle.com/tools/downloads/sqldev-downloads.html#sqldev-install-windows">Oracle SQL Developer Downloads</a><br> <br>
 
     <h2>webnairs IT</h2>
+                <a href="https://event.webinarjam.com/live/1/pgvnrbxt6fvpkb0m">Road Map To Become Job Ready Data Scientist & AI Professional.</a><br> <br>
+                <a href="https://event.webinarjam.com/live/1/pgvnrbxt6fvpkb0m">Road Map To Become Job Ready Data Scientist & AI Professional.</a><br> <br>
+                <a href="https://resume.shine.com/resume-score-checker/">Resume Score Checker - Shine Resume</a><br> <br>
+                <a href="https://pixeltests.teachable.com/courses/enrolled">Pixeltests</a><br> <br>
+                <a href="https://ondemand.webinarjam.com/">WebinarJam OnDemand</a><br> <br>
+                <a href="https://ondemand.webinarjam.com/computers-and-internet/50lr7i3-road-map-to-become-job-ready-data-scientist-ai-professional">WebinarJam OnDemand - Road Map To Become Job Ready Data Scientist & AI Professional.</a><br> <br>
+                <a href="https://ondemand.webinarjam.com/computers-and-internet/33pz7iw-roadmap-to-become-job-ready-data-scientist-ai-professional">WebinarJam OnDemand - Roadmap To Become Job Ready Data Scientist & AI Professional.</a><br> <br>
+
     <h2>New collection (1)</h2>
     <h2>DBZ</h2>
     <h2>New collection</h2>
