--- a/main/index.html
+++ b/main/index.html
@@ -510,6 +510,9 @@
                 <a href="https://ondemand.webinarjam.com/computers-and-internet/33pz7iw-roadmap-to-become-job-ready-data-scientist-ai-professional">WebinarJam OnDemand - Roadmap To Become Job Ready Data Scientist & AI Professional.</a><br> <br>
 
     <h2>New collection (1)</h2>
+                <a href="https://www.bing.com/search?q=what+is+shawman+arguement%3F&qs=n&form=QBRE&sp=-1&ghc=1&pq=what+is+shawman+arguement%3F&sc=0-26&sk=&cvid=464BD5D1844D47EEB670F0A828E4ACA5">what is shawman arguement? - Search</a><br> <br>
+                <a href="https://effectiviology.com/straw-man-arguments-recognize-counter-use/#A_note_on_terminology">Strawman Arguments: What They Are and How to Counter Them – Effectiviology</a><br> <br>
+
     <h2>DBZ</h2>
     <h2>New collection</h2>
 </body>
