--- a/main/index.html
+++ b/main/index.html
@@ -514,6 +514,25 @@
                 <a href="https://effectiviology.com/straw-man-arguments-recognize-counter-use/#A_note_on_terminology">Strawman Arguments: What They Are and How to Counter Them – Effectiviology</a><br> <br>
 
     <h2>DBZ</h2>
+                <a href="https://gogoanime.proxybit.guru/search.html?keyword=dragon%20ball">List All Anime with keyword at Gogoanime | Anime List - Search - gogoanime.proxybit.guru</a><br> <br>
+                <a href="https://gogoanime.proxybit.guru/search.html?keyword=dragon%20ball">List All Anime with keyword at Gogoanime | Anime List - Search - gogoanime.proxybit.guru</a><br> <br>
+                <a href="https://gogoanime.proxybit.guru/search.html?keyword=dragon%20ball">List All Anime with keyword at Gogoanime | Anime List - Search - gogoanime.proxybit.guru</a><br> <br>
+                <a href="https://gogoanime.proxybit.guru/search.html?keyword=dragon%20ball">List All Anime with keyword at Gogoanime | Anime List - Search - gogoanime.proxybit.guru</a><br> <br>
+                <a href="https://animefreak.ws/watch/dragon-ball-dKw0-episode-139/">Watch Dragon Ball 1986 Episode 139 Anime on Animefreak</a><br> <br>
+                <a href="https://animefreak.ws/anime/dragon-ball-dub-Kyo/">Dragon Ball (Dub) 1986 Anime English Subbed in HD for Free on Animefreak</a><br> <br>
+                <a href="https://animefreak.ws/filter?type%5B%5D=tv&status=all&language%5B%5D=subbed&year%5B%5D=Older&countries%5B%5D=40&keyword=dragon&sort=default">Filter results - AnimeFreak</a><br> <br>
+                <a href="https://gogoanime.ar/dragon-ball-super-episode-127">Watch Dragon Ball Super Episode 127 English Subbed at Gogoanime</a><br> <br>
+                <a href="https://gogoanime.ar/search.html?keyword=AVATAR">List All Anime with keyword at Gogoanime | Anime List - Search</a><br> <br> <br>
+    
+    
     <h2>New collection</h2>
+                Facebook
+                https://www.facebook.com/
+                Instagram Photo Downloader - Download Images From Instagram
+                https://igram.io/photo
+                Instagram
+                https://www.instagram.com/
+                Bold text generator (𝔹𝕠𝕝𝕕 𝐁𝐨𝐥𝐝 𝘽𝙤𝙡𝙙 🅱🅾🅻🅳)
+                https://fsymbols.com/generators/blackboard-bold-double-struck/
 </body>
 </html>
