--- a/main/index.html
+++ b/main/index.html
@@ -525,14 +525,10 @@
                 <a href="https://gogoanime.ar/search.html?keyword=AVATAR">List All Anime with keyword at Gogoanime | Anime List - Search</a><br> <br> <br>
     
     
-    <h2>New collection</h2>
-                Facebook
-                https://www.facebook.com/
-                Instagram Photo Downloader - Download Images From Instagram
-                https://igram.io/photo
-                Instagram
-                https://www.instagram.com/
-                Bold text generator (𝔹𝕠𝕝𝕕 𝐁𝐨𝐥𝐝 𝘽𝙤𝙡𝙙 🅱🅾🅻🅳)
-                https://fsymbols.com/generators/blackboard-bold-double-struck/
+    <h2>New collection</h2>            
+                <a href="https://www.facebook.com/">Facebook</a><br> <br>            
+                <a href="https://igram.io/photo">Instagram Photo Downloader - Download Images From Instagram</a><br> <br>            
+                <a href="https://www.instagram.com/">Instagram</a><br> <br>            
+                <a href="https://fsymbols.com/generators/blackboard-bold-double-struck/">Bold text generator (𝔹𝕠𝕝𝕕 𝐁𝐨𝐥𝐝 𝘽𝙤𝙡𝙙 🅱🅾🅻🅳)</a><br> <br> <br>
 </body>
 </html>
