--- a/main/index.html
+++ b/main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Edge Collections</title>
+    <link rel="stylesheet" href="../public/edge_collections_style.css">
 </head>
 <body>
     <h1>My collections at MS edge</h1>
